--- a/index.html
+++ b/index.html
@@ -196,23 +196,23 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">PHP <i class="val">80%</i></span>
+            <span class="skill">React JS <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+            <span class="skill">Next JS <i class="val">70%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Photoshop <i class="val">55%</i></span>
+            <span class="skill">Bootstrap <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -221,6 +221,49 @@
       </div>
 
     </div><!-- End Skills -->
+
+     <!-- ======= Interests ======= -->
+    <div class="interests container">
+
+      <div class="section-title">
+        <h2>learning & Interests</h2>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-3 col-md-4 mb-4">
+          <div class="icon-box">
+            <img src="./assets/img//node.png" style="width: 35px; margin-right: 10px;"/>
+            <h3>Node JS</h3>
+          </div>
+        </div> 
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <img src="./assets/img//mongo.svg" style="width: 35px; margin-right: 10px;"/>
+            <h3>MongoDB</h3>
+          </div>
+        </div>
+         <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <img src="./assets/img//redux.svg" style="width: 35px; margin-right: 10px;"/>
+            <h3>Redux</h3>
+          </div>
+        </div>
+         <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <img src="./assets/img//express.png" style="width: 35px; margin-right: 10px;"/>
+            <h3>Express</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <img src="./assets/img//firebase.png" style="width: 35px; margin-right: 10px;"/>
+            <h3>Firebase</h3>
+          </div>
+        </div>
+      
+      </div>
+
+    </div><!-- End Interests -->
 
     <!-- ======= Interests ======= -->
     <div class="interests container">
@@ -232,13 +275,14 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-store-line" style="color: #ffbb2c;"></i>
+            <img src="./assets/img//node.png" style="width: 35px;"/>
             <h3>Lorem Ipsum</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+            <box-icon type='logo' name='react'></box-icon>
+            <!-- <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i> -->
             <h3>Dolor Sitema</h3>
           </div>
         </div>
@@ -254,54 +298,7 @@
             <h3>Magni Dolores</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-database-2-line" style="color: #47aeff;"></i>
-            <h3>Nemo Enim</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
-            <h3>Eiusmod Tempor</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-            <h3>Midela Teren</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
-            <h3>Pira Neve</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-anchor-line" style="color: #b2904f;"></i>
-            <h3>Dirada Pack</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-disc-line" style="color: #b20969;"></i>
-            <h3>Moton Ideal</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-base-station-line" style="color: #ff5828;"></i>
-            <h3>Verdo Park</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-            <h3>Flavor Nivelanda</h3>
-          </div>
-        </div>
+      
       </div>
 
     </div><!-- End Interests -->
