update the resume section

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
       <h1><a href="index.html">Kushal Vala</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>ReactJS Devloper</span> from India</h2>
+      <h2>I'm a passionate <span>React JS Devloper</span> from India</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
-          <li><a class="nav-link" href="#services">Services</a></li>
+          <!-- <li><a class="nav-link" href="#services">Services</a></li> -->
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
@@ -105,7 +105,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>M.Sc.IT</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href="mailto:kushalvala28296@gmail.com"><span>kushalvala28296@gmail.com</span></a></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href="mailto:kushalvala28296@gmail.com" class="text-white"><span>kushalvala28296@gmail.com</span></a></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
@@ -488,47 +488,50 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <h4>Kushal Vala</h4>
+            <p><em>Innovative and deadline-driven React JS developer with 2.5+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
             <p>
             <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+              <li>Ahmedabad, India.</li>
+              <li>+91 972 577 5505</li>
+              <li>
+                <a href="mailto:kushalvala28296@gmail.com" class="text-white">kushalvala28296@gmail.com</a>
+              </li>
             </ul>
             </p>
           </div>
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            <h4>Master of Science in Information Technology</h4>
+            <h5>2016 - 2018</h5>
+            <p><em>Kadi Sarva Vishwavidhyalaya, Gandhinagar.</em></p>
+            <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
           </div>
           <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            <h4>Bachelor in Computer Application</h4>
+            <h5>2013 - 2016</h5>
+            <p><em>Gujarat University, Ahmedabad</em></p>
+            <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
           </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>React JS Developer</h4>
+            <h5>Nov 2019 - Present</h5>
+            <p><em>Ahmedabad, India. </em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Working as a senior React JS Developer.</li>
+              <li>Developing websites in React JS as per the client's requirements. Converting designs from HTML to React JS and also develop new Site from the figma or any png file.</li>
+              <li>Developing HTML pages from figma or any image as per the requirements.</li>
+              <li>Working on Next JS Projects.</li>
+              <li>Started Learning and developing APIs in Node JS with MongoDB Database.</li>
             </ul>
             </p>
           </div>
-          <div class="resume-item">
+          <!-- <div class="resume-item">
             <h4>Graphic design specialist</h4>
             <h5>2017 - 2018</h5>
             <p><em>Stepping Stone Advertising, New York, NY</em></p>
@@ -540,7 +543,7 @@
               <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
             </ul>
             </p>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -548,7 +551,7 @@
   </section><!-- End Resume Section -->
 
   <!-- ======= Services Section ======= -->
-  <section id="services" class="services">
+  <!-- <section id="services" class="services">
     <div class="container">
 
       <div class="section-title">
@@ -608,7 +611,8 @@
       </div>
 
     </div>
-  </section><!-- End Services Section -->
+  </section> -->
+  <!-- End Services Section -->
 
   <!-- ======= Portfolio Section ======= -->
   <section id="portfolio" class="portfolio">
@@ -778,7 +782,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
+            <p>Ahmedabad, India</p>
           </div>
         </div>
 
@@ -787,11 +791,11 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
+              <a href="https://www.linkedin.com/in/kushal-vala-713862207" target="_blank" class="linkedin mr-2"><i class="bi bi-linkedin"></i></a>
+              <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+              <a href="mailto:kushalvala28296@gmail.com" class="mail mr-2"><i class="bi bi-envelope"></i></a>
+              <a href="#" class="instagram mr-2"><i class="bi bi-instagram"></i></a>
             </div>
           </div>
         </div>
@@ -800,19 +804,19 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>contact@example.com</p>
+            <p><a href='mailto:kushalvala28296@gmail.com' class="text-white">kushalvala28296@gmail.com</a></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+1 5589 55488 55</p>
+            <p>+91 972 577 5505</p>
           </div>
         </div>
       </div>
 
-      <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
+      <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -833,7 +837,7 @@
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
-      </form>
+      </form> -->
 
     </div>
   </section><!-- End Contact Section -->
