--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <!-- <li><a class="nav-link" href="#services">Services</a></li> -->
-          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <!-- <li><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -62,7 +62,7 @@
         <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
         <a href="https://www.linkedin.com/in/kushal-vala-713862207" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
-        <a href="mailto:kushalvala28296@gmail.com" class="mail"><i class="bi bi-envelope"></i></a>
+        <a href="mailto:vkushal28.ca@gmail.com" class="mail"><i class="bi bi-envelope"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
 
@@ -85,27 +85,26 @@
           <img src="assets/img/me1.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>ReactJS 
+          <h3>React JS 
             <!-- &amp; -->
              Developer</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            Innovative and deadline-driven React JS developer with 2.5+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>28 February 1996</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9725775505</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ahmedabad, India</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>  <a href="https://kushal-vala.github.io/portfolio/" target="_blank" class="content"><span>view</span></a></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 (647) 865 9267</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Toronto, ON, Canada</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>M.Sc.IT</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href="mailto:kushalvala28296@gmail.com" class="text-white"><span>kushalvala28296@gmail.com</span></a></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href="mailto:vkushal28.ca@gmail.com" class="text-white"><span>vkushal28.ca@gmail.com</span></a></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
@@ -120,7 +119,7 @@
     </div><!-- End About Me -->
 
     <!-- ======= Counts ======= -->
-    <div class="counts container">
+    <!-- <div class="counts container">
 
       <div class="row">
 
@@ -158,7 +157,8 @@
 
       </div>
 
-    </div><!-- End Counts -->
+    </div> -->
+    <!-- End Counts -->
 
     <!-- ======= Skills  ======= -->
     <div class="skills container">
@@ -179,7 +179,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">CSS <i class="val">90%</i></span>
+            <span class="skill">CSS <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -492,10 +492,10 @@
             <p><em>Innovative and deadline-driven React JS developer with 2.5+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
             <p>
             <ul>
-              <li>Ahmedabad, India.</li>
-              <li>+91 972 577 5505</li>
+              <li>Toronto, ON, Canada.</li>
+              <li>+1 (647) 865-9267</li>
               <li>
-                <a href="mailto:kushalvala28296@gmail.com" class="text-white">kushalvala28296@gmail.com</a>
+                <a href="mailto:vkushal28.ca@gmail.com" class="text-white">vkushal28.ca@gmail.com</a>
               </li>
             </ul>
             </p>
@@ -505,13 +505,13 @@
           <div class="resume-item">
             <h4>Master of Science in Information Technology</h4>
             <h5>2016 - 2018</h5>
-            <p><em>Kadi Sarva Vishwavidhyalaya, Gandhinagar.</em></p>
+            <p><em>Kadi Sarva Vishwavidhyalaya, Gandhinagar, India</em></p>
             <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
           </div>
           <div class="resume-item">
             <h4>Bachelor in Computer Application</h4>
             <h5>2013 - 2016</h5>
-            <p><em>Gujarat University, Ahmedabad</em></p>
+            <p><em>Gujarat University, Ahmedabad, India</em></p>
             <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
           </div>
         </div>
@@ -519,8 +519,8 @@
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
             <h4>React JS Developer</h4>
-            <h5>Nov 2019 - Present</h5>
-            <p><em>Ahmedabad, India. </em></p>
+            <h5>Nov 2019 - Dec 2022</h5>
+            <p><em>Toronto, ON, Canada. </em></p>
             <p>
             <ul>
               <li>Working as a senior React JS Developer.</li>
@@ -782,7 +782,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Ahmedabad, India</p>
+            <p>Toronto, ON, Canada</p>
           </div>
         </div>
 
@@ -794,7 +794,7 @@
               <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
               <a href="https://www.linkedin.com/in/kushal-vala-713862207" target="_blank" class="linkedin mr-2"><i class="bi bi-linkedin"></i></a>
               <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
-              <a href="mailto:kushalvala28296@gmail.com" class="mail mr-2"><i class="bi bi-envelope"></i></a>
+              <a href="mailto:vkushal28.ca@gmail.com" class="mail mr-2"><i class="bi bi-envelope"></i></a>
               <a href="#" class="instagram mr-2"><i class="bi bi-instagram"></i></a>
             </div>
           </div>
@@ -804,14 +804,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p><a href='mailto:kushalvala28296@gmail.com' class="text-white">kushalvala28296@gmail.com</a></p>
+            <p><a href='mailto:vkushal28.ca@gmail.com' class="text-white">vkushal28.ca@gmail.com</a></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+91 972 577 5505</p>
+            <p>+1 (647) 865-9267</p>
           </div>
         </div>
       </div>
