--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
           <div class="resume-item">
             <h4>React JS Developer</h4>
             <h5>Nov 2019 - Dec 2022</h5>
-            <p><em>Toronto, ON, Canada. </em></p>
+            <p><em>Ahmedabad, India </em></p>
             <p>
             <ul>
               <li>Working as a senior React JS Developer.</li>
